--- a/src/styles/ItemAddToCart.css
+++ b/src/styles/ItemAddToCart.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     column-gap: 3rem;
-    margin-top: 2rem;
+    margin-top: 3rem;
     width: 100%;
 }
 
@@ -47,6 +47,7 @@
     font-size: 2rem;
     padding: 1rem;
     text-align: center;
+    margin-left: 0.2rem;
 }
 
 .increaseIcon {
@@ -87,6 +88,6 @@
 
 .itemDescription {
     font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
+    font-size: 1.3rem;
     width: 46%;
 }
