--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -51,3 +51,24 @@
     top: 0;
     z-index: 1;
 }
+
+.itemCountCircle {
+    background-color: #dc2626;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    font-size: 1.1rem;
+    bottom: 20px;
+    left: 19px;
+    border-radius: 40px;
+    width: 1.6rem;
+    height: 1.7rem;
+}
+
+.displayShoppingCart {
+    background-color: transparent;
+    cursor: pointer;
+    padding-top: 1rem;
+}
