--- a/src/styles/ItemAddToCart.css
+++ b/src/styles/ItemAddToCart.css
@@ -88,6 +88,7 @@
 
 .itemDescription {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     width: 46%;
+    margin-top: 0.4rem;
 }
