--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -86,7 +86,7 @@
     height: 100vh;
     width: 35%;
     padding: 1rem;
-    animation: sidebar 0.3s ease-in-out alternate 1
+    animation: sidebar 0.3s ease-in-out alternate
 }
 
 @keyframes sidebar {
@@ -106,6 +106,14 @@
     height: 100vh;
     width: 130vw;
     background-color: rgba(0, 0, 0, 0.7);
+}
+
+.cartOpen {
+    display: block;
+}
+
+.cartNotOpen {
+    display: none;
 }
 
 .cartItemCount {
@@ -225,4 +233,24 @@
 .total {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
+}
+
+@media (max-width: 700px) {
+    .shopHeader {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header {
+        flex-direction: column;
+        align-items: center;
+        padding: 0.5rem;
+        padding-left: 0rem;
+    }
+}
+
+@media (max-width: 450px) {
+    .logo {
+        font-size: 2rem;
+    }
 }
