--- a/src/styles/ItemAddToCart.css
+++ b/src/styles/ItemAddToCart.css
@@ -2,6 +2,9 @@
 
 .itemAddToCart {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .imageAndAddToCart {
@@ -63,7 +66,7 @@
     background-color: black;
     color: white;
     font-family: 'Poppins', sans-serif;
-    width: 90%;
+    width: 95%;
     font-size: 2rem;
     border-radius: 2rem;
     margin-top: 2rem;
@@ -78,17 +81,72 @@
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
+    width: 50%;
 }
 
 .descriptionHeader {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
-    margin-right: 44rem;
+    width: 93%;
 }
 
 .itemDescription {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
-    width: 46%;
+    width: 93%;
     margin-top: 0.4rem;
+    margin-bottom: 1rem;
+}
+
+@media (max-width: 1131px) {
+    .itemDetails {
+        width: 50%;
+        margin-top: 2.5rem;
+    }
+
+    .itemAddCartImg {
+        width: 25%;
+    }
+
+    .itemDescriptionContainer {
+        width: 100%;
+    }
+
+    .descriptionHeader {
+        width: 80%;
+        
+    }
+
+    .itemDescription {
+        width: 80%;
+    }
+
+    .itemCount {
+        padding: 0rem;
+        padding-left: 0.5rem;
+    }
+}
+
+@media (max-width: 685px) {
+    .imageAndAddToCart {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .itemAddCartImg {
+        width: 50%;
+        margin-right: 1rem;
+    }
+
+    .itemTitle {
+        max-width: 30rem;
+    }
+
+    .itemDescription {
+        width: 90%;
+    }
+
+    .descriptionHeader {
+        width: 90%;
+    }
 }
