--- a/src/styles/MainForHomePage.css
+++ b/src/styles/MainForHomePage.css
@@ -8,8 +8,9 @@
     font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 4rem;
-    width: 50%;
+    width: 60%;
     text-align: center;
+    min-height: 10rem;
 }
 
 .homePageText {
@@ -18,11 +19,12 @@
     font-size: 2rem;
     width: 80%;
     text-align: center;
+    margin-top: 1.6rem;
 }
 
 .overlayText {
     width: 100%;
-    height: 50rem;
+    min-height: 42rem;
     background-image:linear-gradient(
         rgba(0, 0, 0, 0.6), 
         rgba(0, 0, 0, 0.6)
@@ -30,10 +32,11 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
+    padding-top: 12rem;
+    padding-bottom: 6rem;
 }
 
 .featuredItemsContainer {
@@ -58,7 +61,6 @@
     margin-top: 2rem;
     column-gap: 5rem;
     row-gap: 2rem;
-    padding-left: 3rem;
 }
 
 .link {
@@ -96,4 +98,55 @@
     font-size: 2rem;
     color: green;
     margin-right: 0.5rem;
+}
+
+@media (max-width: 700px) {
+    .overlayText {
+        padding-top: 15rem;
+    }
+
+    .homePageHeader {
+        width: 80%;
+    }
+
+    .homePageText {
+        width: 80%;
+    }
+}
+
+@media (max-width: 450px) {
+    .homePageHeader {
+        font-size: 2rem;
+        width: 80%;
+    }
+
+    .homePageText {
+        width: 95%;
+        font-size: 1.5rem;
+    }
+
+    .overlayText {
+        padding-top: 13rem;
+        padding-bottom: 2rem;
+    }
+
+    .featuredItemsContainer {
+        padding: 0rem;
+    }
+
+    .featuredItemsHeader {
+        font-size: 2.7rem;
+        margin-top: 2rem;
+    }
+
+    .featuredItem {
+        width: 88%;
+        margin-left: 1.7rem;
+        margin-right: 5rem;
+    }
+
+    .featuredItemPrice {
+        margin-top: 1.1rem;
+        margin-left: 0rem;
+    }
 }
