--- a/src/styles/MainForShopPage.css
+++ b/src/styles/MainForShopPage.css
@@ -51,3 +51,15 @@
     color: green;
     margin-right: 0.5rem;
 }
+
+@media (max-width: 908px) {
+    .shopPageItems {
+        padding-left: 1.2rem;
+    }
+}
+
+@media (max-width: 410px) {
+    .shopPageItems {
+        padding-left: 0.7rem;
+    }
+}
