make total item count stay at +99 if it is more than 99

--- a/src/styles/ItemAddToCart.css
+++ b/src/styles/ItemAddToCart.css
@@ -70,6 +70,11 @@
     font-size: 2rem;
     border-radius: 2rem;
     margin-top: 2rem;
+    transition: transform 0.15s linear;
+}
+
+.addToCart:active {
+    transform: scale(0.9);
 }
 
 .itemDetails {
